[gd_scene load_steps=5 format=3 uid="uid://dbh4lqgpeusll"]

[ext_resource type="Script" uid="uid://c5kqg22kr6v8u" path="res://scripts/level_mechanics/slime_ball.gd" id="1_l0aqo"]
[ext_resource type="Texture2D" uid="uid://do31jykrqc8ui" path="res://icon.svg" id="2_xc6wo"]

[sub_resource type="CircleShape2D" id="CircleShape2D_euwwl"]
radius = 24.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ttffc"]
radius = 24.0

[node name="SlimeBall" type="CharacterBody2D"]
script = ExtResource("1_l0aqo")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.375, 0.375)
texture = ExtResource("2_xc6wo")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_euwwl")
disabled = true

[node name="BulletLifeTime" type="Timer" parent="."]

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_ttffc")

[connection signal="timeout" from="BulletLifeTime" to="." method="_on_bullet_life_time_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
